ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npe5__Affiliation__c/fields/Appointment_Renewed__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Renewed__c</fullName>
    <label>Appointment Renewed</label>
    <type>Date</type>
</CustomField>