ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npe5__Affiliation__c/fields/Current_Term_Ends__c.field-meta.xml
<CustomField>
    <fullName>Current_Term_Ends__c</fullName>
    <label>Current Term Ends</label>
    <type>Date</type>
</CustomField>