ShakeCharity/ShakeSharityApp/force-app/main/default/objects/npe5__Affiliation__c/fields/Proposed_Term_Limit__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Term_Limit__c</fullName>
    <label>Proposed Term Limit</label>
    <type>Date</type>
</CustomField>